tests/ui/enum.rs
use patched::Patch;

#[derive(Patch)]
enum Foo {
    Goo(u64),
}

fn main() {}
